Ordena por 'score' em ordem decrescente